# bayesian-online-change-point-detection

./: CLAUDE.md  README.md  pyproject.toml
bocpd/: __init__.py  detector.py  utils.py
bocpd/hazards/: __init__.py  base.py  constant.py
bocpd/models/: __init__.py  base.py  gaussian.py  poisson.py
notebooks/: bitcoin_bocpd.ipynb  demo_gaussian.ipynb  demo_poisson.ipynb
tests/: test_poisson_model.py
